--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,15 +2,24 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>{% block title %}{{ title }}{% endblock %}</title>
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
         {% block stylesheets %}
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
+        <script src="https://kit.fontawesome.com/906ba2fa3a.js" crossorigin="anonymous"></script>
+
     </head>
     <body>
+
+        {% include 'partials/navbar.html.twig' %}
+
         {% block body %}{% endblock %}
+
+        <div {{ react_component('MyFooter') }}></div>
     </body>
 </html>
